# Arkjiagu

./: .gitignore  ApkGuard_v3.0.apk  Arkjiagu_v2.3_enhanced.apk  README.MD  build.gradle  debug.jks  gradlew  settings.gradle
app/: build.gradle  proguard-rules.pro  release.keystore
app/src/main/: AndroidManifest.xml
app/src/main/assets/: so_name_presets.json
app/src/main/cpp/: ArkDexLoader.cpp  ArkDexLoader.h  ArkEnvGuard.cpp  ArkEnvGuard.h  ArkSelfHash.cpp  ArkSelfHash.h  ArkStub.cpp  ArkTool.cpp  ArkTool.h  ArkVMP.cpp  ArkVMP.h  CMakeLists.txt  GuardDexLoader.cpp  GuardDexLoader.h  GuardEnvGuard.cpp  GuardEnvGuard.h  GuardSelfHash.cpp  GuardSelfHash.h  GuardStub.cpp  GuardTool.cpp  GuardTool.h  GuardVMP.cpp  GuardVMP.h  VmContext.cpp  VmContext.h  VmHandlers.cpp  VmHandlers.h  VmOpcodeDef.h  VmOpcodeHandler.cpp  VmOpcodeHandler.h  VmpInterpreter.cpp  VmpInterpreter.h  VmpParser.cpp  VmpParser.h  VmpRuntime.cpp  VmpRuntime.h  VmpTypes.h  ZipAlign.cpp  sha256.cpp
app/src/main/java/com/apk/guard/: ApkSignUtil.java  GuardJiaguUtils.java  GuardMainActivity.java  GuardSettingsManager.java  JksSha256Util.java  ZipAlign.java
app/src/main/java/com/apk/guard/vm/: VmpInvokeCustomHelper.java  VmpJiaguEntry.java  VmpUtils.java
app/src/main/java/com/ark/jar/android/: R.java
app/src/main/java/com/ark/jar/android/content/: Context.java
app/src/main/java/com/ark/jar/android/content/res/: AXmlResourceParser.java  ChunkUtil.java  IntReader.java  Resources.java  StringBlock.java  XmlResourceParser.java
app/src/main/java/com/ark/jar/android/graphics/: Color.java
app/src/main/java/com/ark/jar/android/text/: TextUtils.java
app/src/main/java/com/ark/jar/android/util/: AttributeSet.java  TypedValue.java
app/src/main/java/com/ark/jar/xml2axml/: AxmlUtils.java  ComplexConsts.java  DefaultReferenceResolver.java  Encoder.java  IntWriter.java  NotImplementedException.java  ReferenceResolver.java  ValueType.java
app/src/main/java/com/ark/jar/xml2axml/chunks/: AttrChunk.java  Chunk.java  ChunkType.java  EndNameSpaceChunk.java  EndTagChunk.java  ResourceMapChunk.java  StartNameSpaceChunk.java  StartTagChunk.java  StringPoolChunk.java  TagChunk.java  ValueChunk.java  XmlChunk.java
app/src/main/java/com/ark/jar/xml2axml/test/: AXMLPrinter.java  Xml2AxmlTool.java
app/src/main/java/com/ark/jiagu/: ApkSignUtil.java  ArkJiaguUtils.java  ArkMainActivity.java  ArkSettingsManager.java  JksSha256Util.java  ZipAlign.java
app/src/main/java/com/ark/jiagu/vm/: VmpInvokeCustomHelper.java  VmpJiaguEntry.java  VmpUtils.java
app/src/main/res/drawable/: bg_button.xml  bg_delete_button.xml  bg_input.xml  bg_log.xml  ic_delete.xml  ic_info.xml  ic_settings.xml
app/src/main/res/layout/: activity_main.xml  dialog_about.xml  dialog_settings.xml  dialog_so_name_preset.xml
app/src/main/res/values/: strings.xml
app/src/main/res/xml/: file_paths.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
